# stackscribe-api

./: .env  .gitignore  Cargo.toml
migrations/: 20250629180910_init.sql
src/: main.rs
src/models/: archive.rs  entry.rs  mod.rs  sync.rs  tome.rs  user.rs
src/routes/: archive.rs  entry.rs  mod.rs  tome.rs  user.rs
src/routes/v1/: archive.rs  entry.rs  mod.rs  sync.rs  tome.rs  user.rs
