
[package]
name = "stackscribe-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"]}
dotenvy = "0.15"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["postgres", "uuid", "runtime-tokio", "macros", "chrono"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"]}
anyhow = "1.0"
serde_json = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
tower-http = { version = "0.6.6", features = ["cors"]}
cors = "0.1.0"
tower = "0.5.2"
service-builder = "0.2.2"
